<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ar.edu.utn.frsf.dam.lab03.CrearOfertaActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvIngreseOferta"
        android:id="@+id/tvIngreseOferta"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etTitulo"
        android:layout_below="@+id/tvIngreseOferta"
        android:layout_alignParentStart="true"
        android:maxLines="1" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCategoria"
        android:id="@+id/tvCategoria"
        android:layout_below="@+id/etTitulo"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/spCategoria"
        android:layout_below="@+id/tvCategoria"
        android:layout_alignParentStart="true"
        android:spinnerMode="dialog" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_hours"
        android:id="@+id/tvHoras"
        android:layout_below="@+id/spCategoria"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etHoras"
        android:layout_below="@+id/tvHoras"
        android:layout_alignParentStart="true"
        android:inputType="number"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvRate"
        android:id="@+id/tvRate"
        android:layout_below="@+id/etHoras"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etRate"
        android:layout_below="@+id/tvRate"
        android:layout_alignParentStart="true"
        android:inputType="numberDecimal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvCurrency"
        android:id="@+id/tvCurrency"
        android:layout_below="@+id/etRate"
        android:layout_alignParentStart="true" />

    <RadioGroup
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvCurrency"
        android:layout_alignParentStart="true"
        android:orientation="horizontal"
        android:id="@+id/rgCurrency">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbUs"
            android:drawableRight="@drawable/us"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbEu"
            android:drawableRight="@drawable/eu"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbAr"
            android:drawableRight="@drawable/ar"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbUk"
            android:drawableRight="@drawable/uk"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/rbBr"
            android:drawableRight="@drawable/br"/>
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvFechaFin"
        android:id="@+id/tvFechaFin"
        android:layout_below="@+id/rgCurrency"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etFechaFin"
        android:layout_below="@+id/tvFechaFin"
        android:layout_alignParentStart="true"
        android:inputType="date"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cbEnIngles"
        android:id="@+id/cbEnIngles"
        android:layout_below="@+id/etFechaFin"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btGuardar"
        android:id="@+id/btGuardar"
        android:layout_below="@+id/cbEnIngles"
        android:layout_alignParentStart="false"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
